--- a/src/views/block/_footer.html
+++ b/src/views/block/_footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-sm-3">
+            <div class="col-md-3 col-sm-6">
                 <h4>Thông tin điện máy Thiên Hòa</h4>
                 <ul>
                     <li><a href="javascript:void();" title="">Hệ thống siêu thị</a>
@@ -18,7 +18,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-sm-3 padding">
+            <div class="col-md-3 padding col-sm-6">
                 <h4>Hỗ trợ khách hàng</h4>
                 <ul>
                     <li><a href="javascript:void();" title="">Hướng dẫn mua hàng</a>
@@ -34,7 +34,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3 col-sm-6">
                 <h4>Tổng đài hỗ trợ</h4>
                 <span class="note">(1000đ/Phút; 08h-22h, kể cả T7, CN)</span>
                 <p class="telephone"><a href="tel:1900 1829" title="" target="_blank">1900 1829</a></p>
@@ -45,7 +45,7 @@
                 </ul>
                 <a href="javascript:void(0);" title="" class="btn btn-border other"><span>Gửi yêu cầu hỗ trợ khác</span></a>
             </div>
-            <div class="col-sm-3">
+            <div class="col-md-3 col-sm-6">
                 <div class="connect-mymall">
                     <h4>Kết nối với Điện Máy Thiên Hòa</h4>
                     <p><img src="assets/images/imgfb.jpg" alt=""></p>
