--- a/src/views/category-h1.html
+++ b/src/views/category-h1.html
@@ -11,7 +11,7 @@
                 {% include "block/_block-sidebar.html" %}
             </div>
             <!-- sidebar -->
-            <div class="col-md-10 width-reset-col-md-10 main-content-right">
+            <div class="col-md-10 col-xs-12 width-reset-col-md-10 main-content-right">
                 <div class="clearfix">
                     <p>Hiển thị sản phẩm theo: </p>
                     <ul class="list-radio">
@@ -29,7 +29,7 @@
                 <div class="block-buy block-devices">
                     <div class="row">
                         {% for x in [1,2,3,4,5,6,7,8,9,10,11,12] %}
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6">
                             <div class="box">
                                 <div class="sale">
                                     <span class="number">31</span>
