--- a/src/views/layout/_layout-base.html
+++ b/src/views/layout/_layout-base.html
@@ -14,7 +14,7 @@
     <meta content='' property='og:description'/>
     <meta content='images/upload/fb-post.jpg' property='og:image'/>
 
-	<title>myFace - Promotion tháng 12</title>
+	<title>Fujiyama</title>
 	<!-- Styles -->
 	{% include "../block/_style.html" %}
 	<!-- Favicon -->
@@ -40,72 +40,231 @@
 	        </div>
 	        <div class="search-top">
 	            <div class="input-group header-search">
-	                <div class="input-group-btn select-btn">
-	                    <select class="selectpicker cate-search">
-	                        <option>Farmers</option>
-	                        <option>Danh mục 1</option>
-	                        <option>Danh mục 2</option>
-	                        <option>Danh mục 3</option>
-	                        <option>Danh mục 5</option>
-	                    </select>
-	                </div>
 	                <input aria-label="..." class="form-control input-search" placeholder="" type="text">
 	                <button type="submit" class="btn btn-search">Search</button>
 	            </div>
 	        </div>
-	    </div>
-	    
+	        <div id="collapseExample">
+	        <div class="container">
+	            <div class="wrap-slider clearfix">
+	                <div class="slider">
+	                    <div id="owl-demo1" class="owl-carousel owl-theme">
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="1">Tủ lạnh</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="2">Máy lạnh</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="3">Máy giặt</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="4">Tủ đông</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="5">Gia dụng</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="6">Âm thanh</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="7">Gia đình</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="8">Điện thoại & Tablet</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="9">Thiết bị Nghe nhìn</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="10">Thực Phẩm (Focus Bánh)</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="11">Sức Khỏe & Làm Đẹp</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="12">Thời Trang</a></div>
+	                        <div class="item"> <a href="javascript:void(0);" title="" data-id="13">eBook</a></div>
+	                    </div>
+	                </div>
+	                <div class="next-pre">
+	                    <div class="customNavigation"><a href="javascript:void(0);" title="" class="btn prev"><span class="fa fa-angle-left"></span></a><a href="javascript:void(0);" title="" class="btn next"><span class="fa fa-angle-right"></span></a></div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>   
+	    </div>	
+	     
 	    <nav id="menu">
 	        <ul>
-	            <li><a href="#">Rosbusta</a></li>
-	            <li><a href="#">cenephora</a></li>
+	        	<li><h2>Gia Dụng</h2></li>
 	            <li>
-	            	<a href="#">liberica</a>
+	            	<a href="#">Danh mục</a>
 	            	<ul class="mm-listview">
-						<li><a href="#">Introduction</a></li>
-						<li><a href="#">Auto height</a></li>
-						<li><a href="#">Back button</a></li>
-						<li><a href="#">Columns</a><em class="badge mm-counter">5.6</em></li>
-						<li><a href="#">Counters</a></li>
-						<li><a href="#">Dividers</a></li>
-						<li><a href="#">Drag</a><em class="badge mm-counter">5.7</em></li>
+						<li>
+							<a href="#">Đồ dùng nhà bếp</a><em class="badge mm-counter">1378</em>
+							<ul class="mm-listview">
+								<li><a href="#">Bếp ga </a><em class="badge mm-counter">1378</em></li>
+								<li><a href="#">Bếp từ </a><em class="badge mm-counter">578</em></li>
+							</ul>
+						</li>
+						<li>
+							<a href="#">Thiết bị gia đình</a><em class="badge mm-counter">578</em>
+							<ul class="mm-listview">
+								<li><a href="#">Bếp ga </a><em class="badge mm-counter">1378</em></li>
+								<li><a href="#">Bếp từ </a><em class="badge mm-counter">578</em></li>
+							</ul>
+						</li>
+						<li><a href="#">Các sản phẩm khác</a><em class="badge mm-counter">78</em></li>
 					</ul>
 	            </li>
 	            <li>
-	            	<a href="#">laurina</a>
+	            	<a href="#">Thương hiệu</a>
 	            	<ul class="mm-listview">
 						<li>
 							<a class="checkbox">
 		                        <input id="check1" type="checkbox" name="check" value="check1">
-		                        <label for="check1">Sony <span class="number">(78)</span></label>
+		                        <label for="check1">Sony</label>
 		                    </a>
+		                    <em class="badge mm-counter">578</em>
 						</li>
 						<li>
 							<a class="checkbox">
 		                        <input id="check2" type="checkbox" name="check" value="check1">
-		                        <label for="check2">Samsung <span class="number">(178) </span></label>
+		                        <label for="check2">Samsung</label>
+		                        <em class="badge mm-counter">178</em>
 		                    </a>
 						</li>
-						<li><a href="#">Back button</a></li>
-						<li><a href="#">Columns</a><em class="badge mm-counter">5.6</em></li>
-						<li><a href="#">Counters</a></li>
-						<li><a href="#">Dividers</a></li>
-						<li><a href="#">Drag</a><em class="badge mm-counter">5.7</em></li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check3" type="checkbox" name="check" value="check1">
+		                        <label for="check3">LG</label>
+		                        <em class="badge mm-counter">178</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check4" type="checkbox" name="check" value="check1">
+		                        <label for="check4">Panasonic</label>
+		                        <em class="badge mm-counter">178</em>
+		                    </a>
+						</li>
 					</ul>
 	            </li>
-	            <li><a href="#">kawisari</a></li>
-	            <li><a href="#">arabica</a></li>
-	            <li><a href="#">gesha</a></li>
-	            <li><a href="#">typica</a></li>
-	            <li><a href="#">bourbon</a></li>
-	            <li><a href="#">french mission</a></li>
-	            <li><a href="#">pointu</a></li>
-	            <li><a href="#">SL34</a></li>
-	            <li><a href="#">ethiopian harrar</a></li>
-	            <li><a href="#">ethiopian sidamo</a></li>
-	            <li><a href="#">Today's deal</a></li>
-	            <li><a href="#">Register your beans?</a></li>
-	            <li><a href="#">Sell your beans?</a></li>
+	            <li>
+	            	<a href="#">Kích thước màn hình</a>
+	            	<ul class="mm-listview">
+						<li>
+							<a class="checkbox">
+		                        <input id="check5" type="checkbox" name="check" value="check1">
+		                        <label for="check5">Dưới 32 inch (35) <span>(Khoảng cách: Dưới 2m)</span></label>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check6" type="checkbox" name="check" value="check1">
+		                        <label for="check6">32-43 inch (19) <span>(Khoảng cách: 2-3m)</span></label>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check7" type="checkbox" name="check" value="check1">
+		                        <label for="check7">44-55 inch (158) <span>(Khoảng cách: 3-4m)</span></label>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check8" type="checkbox" name="check" value="check1">
+		                        <label for="check8">Trên 55 inch (89) <span>(Khoảng cách: Trên 5m)</span> </label>
+		                    </a>
+						</li>
+					</ul>
+	            </li>
+	            <li>
+	            	<a href="#">Giá bán</a>
+	            	<ul class="mm-listview">
+						<li>
+							<a class="checkbox">
+		                        <input id="check9" type="checkbox" name="check" value="check1">
+		                        <label for="check9">Dưới 5 triệu</label>
+		                    </a>
+		                    <em class="badge mm-counter">78</em>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check10" type="checkbox" name="check" value="check1">
+		                        <label for="check10">Từ 5 - 7 triệu </label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check11" type="checkbox" name="check" value="check1">
+		                        <label for="check11">Từ 7 - 10 triệu</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check12" type="checkbox" name="check" value="check1">
+		                        <label for="check12">Từ 10 - 15 triệu</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check13" type="checkbox" name="check" value="check1">
+		                        <label for="check13">Từ 15 - 20 triệu</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check14" type="checkbox" name="check" value="check1">
+		                        <label for="check14">Từ 20 - 25 triệu</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="check15" type="checkbox" name="check" value="check1">
+		                        <label for="check15">Trên 30 triệu</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+					</ul>
+	            </li>
+	            <li>
+	            	<a href="#">Loại Tivi</a>
+	            	<ul class="mm-listview">
+						<li>
+							<a class="checkbox">
+		                        <input id="checka" type="checkbox" name="check" value="check1">
+		                        <label for="checka">Smart Tivi </label>
+		                    </a>
+		                    <em class="badge mm-counter">78</em>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checkb" type="checkbox" name="check" value="check1">
+		                        <label for="checkb">Tivi Oled</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checkc" type="checkbox" name="check" value="check1">
+		                        <label for="checkc">Tivi HDR </label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checkd" type="checkbox" name="check" value="check1">
+		                        <label for="checkd">Tivi 3D</label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checke" type="checkbox" name="check" value="check1">
+		                        <label for="checke">Tivi thường </label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checkf" type="checkbox" name="check" value="check1">
+		                        <label for="checkf">Tivi màn hình cong </label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+						<li>
+							<a class="checkbox">
+		                        <input id="checkg" type="checkbox" name="check" value="check1">
+		                        <label for="checkg">Tivi 4K </label>
+		                        <em class="badge mm-counter">78</em>
+		                    </a>
+						</li>
+					</ul>
+	            </li>
 	        </ul>
 	    </nav>
 		<!--header-->
