--- a/src/assets/less/style/responsive.less
+++ b/src/assets/less/style/responsive.less
@@ -1,7 +1,4 @@
 @media (min-width: 1400px) {
-	.container {
-		width: 1500px;
-	}
 	.header-search {
 	    width: 53%;
 	    margin: 0 auto;
@@ -18,9 +15,6 @@
 }
 
 @media (max-width: 1399px) {
-	.container {
-	    width: 100%;
-	}
 	header .topnav {
 	    padding: 0 30px 0 0px;
 	    .list-link {
@@ -146,11 +140,8 @@
 	}
 }
 @media (max-width: 991px) {
-	.container,
-	footer .container {
-	    width: 100%;
-	}
-	header {
+	header,
+	.sidebar {
 		display: none;
 	}
 	.header {
@@ -158,6 +149,9 @@
 		img {
 	    	margin-top: 15px;
 	    }
+	}
+	.width-reset-col-md-10 {
+		width: 100%;
 	}
 	.header a {
 	    top: 30px;
