--- a/src/assets/less/style/page/index.less
+++ b/src/assets/less/style/page/index.less
@@ -517,6 +517,14 @@ img {
 .width-reset-col-md-10 {
     width: 930px;
 }
+.menu-slick-style1 {
+    z-index: 99999;
+    width: 100%;
+    top: 0;
+    left: 0;
+    /* max-height: 145px; */
+    overflow: hidden;
+}
 /* end process bar */
 @media (max-width: 1024px) {
     .block-icons .list-icons li:first-child, 
