--- a/src/views/block/_footer.html
+++ b/src/views/block/_footer.html
@@ -2,19 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6">
-                <h4>Thông tin điện máy Thiên Hòa</h4>
+                <h4>Về Fujiyama</h4>
                 <ul>
-                    <li><a href="javascript:void();" title="">Hệ thống siêu thị</a>
+                    <li><a href="javascript:void();" title="">Hệ thống trung tâm/ Cữa hàng</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Giới thiệu công ty</a>
+                    <li><a href="javascript:void();" title="">Thương hiệu</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Tuyển dụng</a>
+                    <li><a href="javascript:void();" title="">Philosophy</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Liên hệ, góp ý</a>
+                    <li><a href="javascript:void();" title="">Chứng nhận sản phẩm</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Tìm hiểu về mua hàng trả góp</a>
-                    </li>
-                    <li><a href="javascript:void();" title="">Bán hàng doanh nghiệp</a>
+                    <li class="bct">
+                        <a href="#"><img src="assets/images/bct1.png" alt=""></a>
                     </li>
                 </ul>
             </div>
@@ -23,15 +22,13 @@
                 <ul>
                     <li><a href="javascript:void();" title="">Hướng dẫn mua hàng</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Giao hàng, lắp đặt</a>
+                    <li><a href="javascript:void();" title="">Chế độ bảo hành</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Bảo hành, đổi trả</a>
+                    <li><a href="javascript:void();" title="">Trung tâm bảo hành</a>
                     </li>
-                    <li><a href="javascript:void();" title="">Tìm trung tâm bảo hành</a>
+                    <li><a href="javascript:void();" title="">Blog Fujiyama</a>
                     </li>
-                    <li class="bct">
-                        <a href="#"><img src="assets/images/bct1.png" alt=""></a>
-                    </li>
+                    
                 </ul>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -39,17 +36,22 @@
                 <span class="note">(1000đ/Phút; 08h-22h, kể cả T7, CN)</span>
                 <p class="telephone"><a href="tel:1900 1829" title="" target="_blank">1900 1829</a></p>
                 <ul class="list-support">
-                    <li>- Mua hàng: Bấm phím 1</li>
-                    <li>- Bảo hành: Bấm phím 2</li>
-                    <li>- Khiếu nại: Bấm phím 0</li>
+                    <li>- Mua hàng: Bấm phím <b class="red">(1)</b></li>
+                    <li>- Bảo hành: Bấm phím <b class="red">(2)</b></li>
+                    <li>- Giao hàng, lắp đặt: Bấm phím <b class="red">(3)</b></li>
+                    <li>- Tư vấn ky thuật: Bấm phím <b class="red">(4)</b></li>
+                    <li>- Hướng dẫn chung: Bấm phím  <b class="red">(0)</b></li>
                 </ul>
-                <a href="javascript:void(0);" title="" class="btn btn-border other"><span>Gửi yêu cầu hỗ trợ khác</span></a>
             </div>
             <div class="col-md-3 col-sm-6">
                 <div class="connect-mymall">
-                    <h4>Kết nối với Điện Máy Thiên Hòa</h4>
+                    <h4>Kết nối với Fujiyama</h4>
                     <p><img src="assets/images/imgfb.jpg" alt=""></p>
                     <p class="youtube"><img src="assets/images/imgyt.jpg" alt=""> <b class="text">86.1K Đăng ký</b></p>
+                </div>
+                <div class="thienhoa">
+                    <p>Website cùng hệ thống:</p>
+                    <a href="#"><img src="assets/images/logo-footer.png" alt=""> <span>dienmaythienhoa.vn</span></a>
                 </div>
             </div>
         </div>
