--- a/src/views/block/_header.html
+++ b/src/views/block/_header.html
@@ -6,7 +6,7 @@
                         <img src="assets/images/logo.png" alt="logo">
                     </a>
             </div>
-            <div class="col-xs-12 col-sm-5 col-md-6">
+            <div class="col-xs-12 col-sm-7 col-md-6">
                 <form class="navbar-form">
                     <div class="input-group">
                         <input type="text" id="key_search" class="form-control" placeholder="Xin chào, bạn có muốn mua gì không?" name="q">
@@ -92,14 +92,14 @@
                     </div>
                 </form>
             </div>
-            <div class="col-xs-8 col-sm-5 col-md-4 hotline">
+            <div class="col-xs-8 col-sm-3 col-md-4 hotline">
                 <div class="row">
-                    <div class="col-xs-5 col-sm-6 no-padding">
+                    <!-- <div class="col-xs-5 col-sm-6 no-padding"> -->
                         <p>Hỗ trợ: <a class="telephone" href="tel:1900 1826" title="">1900 1826 (1)</a></p>
-                    </div>
-                    <div class="col-xs-7 col-sm-6 no-padding">
+                    <!-- </div> -->
+                    <!-- <div class="col-xs-7 col-sm-6 no-padding"> -->
                         <p class="time">(08h00 - 22h00, Thứ 2 - Chủ nhật)</p>
-                    </div>
+                    <!-- </div> -->
                 </div>
             </div>
         </div>
