--- a/src/views/category-h1.html
+++ b/src/views/category-h1.html
@@ -1,4 +1,6 @@
-{% extends "layout/_layout.html" %} {% block page-container %}
+{% set current_page = 'category' %}
+{% extends "layout/_layout.html" %}
+{% block page-container %}
 <main>
     <div class="container">
         <ol class="breadcrumb">
