--- a/src/views/block/_script.html
+++ b/src/views/block/_script.html
@@ -3,5 +3,6 @@
 <script src="assets/js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/js/jquery.mmenu.js" type="text/javascript"></script>
 <script src="assets/js/owl.carousel.js" type="text/javascript"></script>
+<script src="assets/js/drag-on.js" type="text/javascript"></script>
 <script src="assets/js/swiper.min.js" type="text/javascript"></script>
 <script src="assets/js/script.js" type="text/javascript"></script>
